// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BpkGraphicPromo should not have programmatically-detectable accessibility issues in centre aligned 1`] = `
<DocumentFragment>
  <section
    class="bpk-panel bpk-graphic-promo"
    href="https://www.skyscanner.net"
    style="background-image: url(path/to/image.jpg); color: white;"
  >
    <div
      class="bpk-graphic-promo__container bpk-graphic-promo__container--center"
    >
      <div
        class="bpk-graphic-promo__sponsor-content bpk-graphic-promo__sponsor-content--center"
      >
        <span
          class="bpk-text bpk-text--body-default bpk-graphic-promo__sponsor-label"
        >
          Sponsored
        </span>
        <img
          alt="Airline Name"
          class="bpk-graphic-promo__sponsor-logo"
          src="path/to/logo.png"
        />
      </div>
      <div
        class="bpk-graphic-promo__promo-content bpk-graphic-promo__promo-content--center"
      >
        <h2
          class="bpk-text bpk-text--body-default bpk-graphic-promo__headline"
        >
          Ride your wave
        </h2>
        <p
          class="bpk-text bpk-text--body-default bpk-graphic-promo__strapline"
        >
          Portugal and 6 more countries have just been added to the UK travel green list
        </p>
        <a
          class="bpk-button bpk-graphic-promo__cta"
          href="https://www.skyscanner.net"
        >
          Learn more
        </a>
      </div>
    </div>
  </section>
</DocumentFragment>
`;

exports[`BpkGraphicPromo should not have programmatically-detectable accessibility issues in inverted portrait 1`] = `
<DocumentFragment>
  <section
    class="bpk-panel bpk-graphic-promo"
    href="https://www.skyscanner.net"
    style="background-image: url(path/to/image.jpg); color: white;"
  >
    <div
      class="bpk-graphic-promo__container bpk-graphic-promo__container--start bpk-graphic-promo__container--inverted"
    >
      <div
        class="bpk-graphic-promo__sponsor-content bpk-graphic-promo__sponsor-content--start"
      >
        <span
          class="bpk-text bpk-text--body-default bpk-graphic-promo__sponsor-label"
        >
          Sponsored
        </span>
        <img
          alt="Airline Name"
          class="bpk-graphic-promo__sponsor-logo"
          src="path/to/logo.png"
        />
      </div>
      <div
        class="bpk-graphic-promo__promo-content bpk-graphic-promo__promo-content--start"
      >
        <h2
          class="bpk-text bpk-text--body-default bpk-graphic-promo__headline"
        >
          Ride your wave
        </h2>
        <p
          class="bpk-text bpk-text--body-default bpk-graphic-promo__strapline"
        >
          Portugal and 6 more countries have just been added to the UK travel green list
        </p>
        <a
          class="bpk-button bpk-graphic-promo__cta"
          href="https://www.skyscanner.net"
        >
          Learn more
        </a>
      </div>
    </div>
  </section>
</DocumentFragment>
`;

exports[`BpkGraphicPromo should not have programmatically-detectable accessibility issues in non-sponsored 1`] = `
<DocumentFragment>
  <section
    class="bpk-panel bpk-graphic-promo"
    href="https://www.skyscanner.net"
    style="background-image: url(path/to/image.jpg); color: white;"
  >
    <div
      class="bpk-graphic-promo__container bpk-graphic-promo__container--start"
    >
      <div
        class="bpk-graphic-promo__promo-content bpk-graphic-promo__promo-content--start"
      >
        <span
          class="bpk-text bpk-text--body-default bpk-graphic-promo__kicker"
        >
          Kicker
        </span>
        <h2
          class="bpk-text bpk-text--body-default bpk-graphic-promo__headline"
        >
          Ride your wave
        </h2>
        <p
          class="bpk-text bpk-text--body-default bpk-graphic-promo__strapline"
        >
          Portugal and 6 more countries have just been added to the UK travel green list
        </p>
        <a
          class="bpk-button bpk-graphic-promo__cta"
          href="https://www.skyscanner.net"
        >
          Learn more
        </a>
      </div>
    </div>
  </section>
</DocumentFragment>
`;

exports[`BpkGraphicPromo should not have programmatically-detectable accessibility issues in right aligned 1`] = `
<DocumentFragment>
  <section
    class="bpk-panel bpk-graphic-promo"
    href="https://www.skyscanner.net"
    style="background-image: url(path/to/image.jpg); color: white;"
  >
    <div
      class="bpk-graphic-promo__container bpk-graphic-promo__container--end"
    >
      <div
        class="bpk-graphic-promo__sponsor-content bpk-graphic-promo__sponsor-content--end"
      >
        <span
          class="bpk-text bpk-text--body-default bpk-graphic-promo__sponsor-label"
        >
          Sponsored
        </span>
        <img
          alt="Airline Name"
          class="bpk-graphic-promo__sponsor-logo"
          src="path/to/logo.png"
        />
      </div>
      <div
        class="bpk-graphic-promo__promo-content bpk-graphic-promo__promo-content--end"
      >
        <h2
          class="bpk-text bpk-text--body-default bpk-graphic-promo__headline"
        >
          Ride your wave
        </h2>
        <p
          class="bpk-text bpk-text--body-default bpk-graphic-promo__strapline"
        >
          Portugal and 6 more countries have just been added to the UK travel green list
        </p>
        <a
          class="bpk-button bpk-graphic-promo__cta"
          href="https://www.skyscanner.net"
        >
          Learn more
        </a>
      </div>
    </div>
  </section>
</DocumentFragment>
`;

exports[`BpkGraphicPromo should not have programmatically-detectable accessibility issues when optional text is missing 1`] = `
<DocumentFragment>
  <section
    class="bpk-panel bpk-graphic-promo"
    href="https://www.skyscanner.net"
    style="background-image: url(path/to/image.jpg); color: white;"
  >
    <div
      class="bpk-graphic-promo__container bpk-graphic-promo__container--start"
    >
      <div
        class="bpk-graphic-promo__sponsor-content bpk-graphic-promo__sponsor-content--start"
      >
        <span
          class="bpk-text bpk-text--body-default bpk-graphic-promo__sponsor-label"
        >
          Sponsored
        </span>
        <img
          alt="Airline Name"
          class="bpk-graphic-promo__sponsor-logo"
          src="path/to/logo.png"
        />
      </div>
      <div
        class="bpk-graphic-promo__promo-content bpk-graphic-promo__promo-content--start"
      >
        <h2
          class="bpk-text bpk-text--body-default bpk-graphic-promo__headline"
        >
          Ride your wave
        </h2>
        <a
          class="bpk-button bpk-graphic-promo__cta"
          href="https://www.skyscanner.net"
        >
          Learn more
        </a>
      </div>
    </div>
  </section>
</DocumentFragment>
`;

exports[`BpkGraphicPromo should render correctly with all properties set 1`] = `
<DocumentFragment>
  <section
    class="bpk-panel bpk-graphic-promo"
    href="https://www.skyscanner.net"
    style="background-image: url(path/to/image.jpg); color: white;"
  >
    <div
      class="bpk-graphic-promo__container bpk-graphic-promo__container--start"
    >
      <div
        class="bpk-graphic-promo__sponsor-content bpk-graphic-promo__sponsor-content--start"
      >
        <span
          class="bpk-text bpk-text--body-default bpk-graphic-promo__sponsor-label"
        >
          Sponsored
        </span>
        <img
          alt="Airline Name"
          class="bpk-graphic-promo__sponsor-logo"
          src="path/to/logo.png"
        />
      </div>
      <div
        class="bpk-graphic-promo__promo-content bpk-graphic-promo__promo-content--start"
      >
        <h2
          class="bpk-text bpk-text--body-default bpk-graphic-promo__headline"
        >
          Ride your wave
        </h2>
        <p
          class="bpk-text bpk-text--body-default bpk-graphic-promo__strapline"
        >
          Portugal and 6 more countries have just been added to the UK travel green list
        </p>
        <a
          class="bpk-button bpk-graphic-promo__cta"
          href="https://www.skyscanner.net"
        >
          Learn more
        </a>
      </div>
    </div>
  </section>
</DocumentFragment>
`;

exports[`BpkGraphicPromo should support arbitrary props 1`] = `
<DocumentFragment>
  <section
    class="bpk-panel bpk-graphic-promo"
    href="https://www.skyscanner.net"
    style="background-image: url(path/to/image.jpg); color: white;"
  >
    <div
      class="bpk-graphic-promo__container bpk-graphic-promo__container--start"
    >
      <div
        class="bpk-graphic-promo__sponsor-content bpk-graphic-promo__sponsor-content--start"
      >
        <span
          class="bpk-text bpk-text--body-default bpk-graphic-promo__sponsor-label"
        >
          Sponsored
        </span>
        <img
          alt="Airline Name"
          class="bpk-graphic-promo__sponsor-logo"
          src="path/to/logo.png"
        />
      </div>
      <div
        class="bpk-graphic-promo__promo-content bpk-graphic-promo__promo-content--start"
      >
        <h2
          class="bpk-text bpk-text--body-default bpk-graphic-promo__headline"
        >
          Ride your wave
        </h2>
        <p
          class="bpk-text bpk-text--body-default bpk-graphic-promo__strapline"
        >
          Portugal and 6 more countries have just been added to the UK travel green list
        </p>
        <a
          class="bpk-button bpk-graphic-promo__cta"
          href="https://www.skyscanner.net"
        >
          Learn more
        </a>
      </div>
    </div>
  </section>
</DocumentFragment>
`;

exports[`BpkGraphicPromo should support custom class names 1`] = `
<DocumentFragment>
  <section
    class="bpk-panel bpk-graphic-promo custom-classname"
    href="https://www.skyscanner.net"
    style="background-image: url(path/to/image.jpg); color: white;"
  >
    <div
      class="bpk-graphic-promo__container bpk-graphic-promo__container--start"
    >
      <div
        class="bpk-graphic-promo__sponsor-content bpk-graphic-promo__sponsor-content--start"
      >
        <span
          class="bpk-text bpk-text--body-default bpk-graphic-promo__sponsor-label"
        >
          Sponsored
        </span>
        <img
          alt="Airline Name"
          class="bpk-graphic-promo__sponsor-logo"
          src="path/to/logo.png"
        />
      </div>
      <div
        class="bpk-graphic-promo__promo-content bpk-graphic-promo__promo-content--start"
      >
        <h2
          class="bpk-text bpk-text--body-default bpk-graphic-promo__headline"
        >
          Ride your wave
        </h2>
        <p
          class="bpk-text bpk-text--body-default bpk-graphic-promo__strapline"
        >
          Portugal and 6 more countries have just been added to the UK travel green list
        </p>
        <a
          class="bpk-button bpk-graphic-promo__cta"
          href="https://www.skyscanner.net"
        >
          Learn more
        </a>
      </div>
    </div>
  </section>
</DocumentFragment>
`;
